Modal displaying bug on mobile device fixed

--- a/templates/bootstrap/css/bootstrap-responsive.css
+++ b/templates/bootstrap/css/bootstrap-responsive.css
@@ -882,10 +882,10 @@
     margin-left: 0;
   }
   .modal {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    left: 20px;
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    left: 3%;
     width: auto;
     margin: 0;
   }
